--- a/frontend/2. html/src/cliente/index.html
+++ b/frontend/2. html/src/cliente/index.html
@@ -38,6 +38,9 @@
             <li class="nav-item">
               <a class="nav-link" href="pastel-personalizado.html">Personalizado</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pastelero/index.html">Pastelero</a>
+            </li>
         </ul>
       </header>
     </div>
