--- a/frontend/2. html/src/pastelero/inventario.html
+++ b/frontend/2. html/src/pastelero/inventario.html
@@ -33,7 +33,7 @@
             <a class="nav-link disabled"  href="#">Reportes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../cliente/pastel-personalizado.html">sClientes</a>
+            <a class="nav-link" href="../clientes/index.html">sClientes</a>
           </li>
         </ul>
       </header>
